<resources>
    <string name="app_name">globalrestorationchurch</string>
    <string name="title_sermons">Sermons</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_giving">Giving</string>
    <string name="title_connect">Connect</string>
    <string name="title_signin">Sign In</string>
    <string name="title_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_user_details">UserDetails</string>
    <!-- Strings used for fragments for navigation -->

    <string name="sign_out">SIGN OUT</string>
    <string name="profile_picture">profile picture</string>
    <string name="pej">pej</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="creation">creation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="title_signout">signout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="areyousure">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>
