<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sermon"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/title_sermons" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_bubble_24"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_giving"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_giving" />

    <item
        android:id="@+id/navigation_connect"
        android:icon="@drawable/ic_baseline_wb_cloudy_24"
        android:title="@string/title_connect" />

</menu>